  # ChangeLog for Portage; the Gentoo Linux ports system Copyright 2000-2003
  # Gentoo Technologies, Inc.; Distributed under the GPL v2 $Id: ChangeLog,v
  # 1.456 2003/05/29 08:36:16 carpaski Exp $
  
	06 Jun 2003; Daniel Robbins <drobbins@gentoo.org> ebuild.sh: new eclass
	dependency implementation to totally isolate eclass dependency tweaks
	from in-ebuild dependency tweaks. eclasses now absolutely do not touch
	DEPEND and RDEPEND. Any dependencies added by eclasses are transferred
	to another variable and added in to DEPEND and RDEPEND after the entire
	ebuild has been processed, and after RDEPEND has optionally inherited a
	value from DEPEND due to it being unset. The result of this change is
	that inherit statements no longer need to be placed strategically in an
	ebuild so that they are after the DEPEND and RDEPEND, and fix a host of
	other eclass mis-use/side-effect bugs.
  
  *portage-2.0.48-r1 (29 May 2003): Touchups.
  
	29 May 2003; Nicholas Jones <carpaski@gentoo.org> g-cpan.pl: Fixed by
	jrray as it broke in 2.0.48.
  
	29 May 2003; Nicholas Jones <carpaski@gentoo.org> ebuild.sh: Quick fixes
	to a couple of rare bugs. Added some quoting to $S. Removed the DISTCC
	hosts variable. Moved build-info's creation around so that it actually
	works for non-portage-compiled merges.
  
	29 May 2003; Nicholas Jones <carpaski@gentoo.org> repoman: Quick fix for
	the files-dir-not-added lack of notification. Added in a fix for a
	possible security problem with the repoman commit messages and
	symlink-attacks.
  
	29 May 2003; Nicholas Jones <carpaski@gentoo.org> cnf/*: Added in a diff
	from 'Danny' that contained a SYNC cleanup and expanded explanation. :)
  
	29 May 2003; Nicholas Jones <carpaski@gentoo.org> output.py: Fixed the
	TitleBar and unset TERM issues.
  
	29 May 2003; Nicholas Jones <carpaski@gentoo.org> portage.py: Added new
	functions to aid in determining virtuals. cpv_all() added to dbapi -- it