@@ -19,7 +19,7 @@ for x in "$@"; do # "$@" quotes each element... Plays nice with spaces.
 	if [ -d "${x}" ]; then
 		# We only want files. So make a pass for each directory and call again.
 		find "${x}" -type f \( -perm +0111 -or -regex '\.so$|\.so\.' \) -print0 |
-				xargs -0 -r -n500 prepstrip
+				$XARGS -0 -n500 prepstrip
 	else
 		f=$(file "${x}")
 		if [ -z "${f/*SB executable*/}" ]; then
